--- a/index.Rmd
+++ b/index.Rmd
@@ -37,13 +37,13 @@ The Faculty of Computer and Mathematical Sciences of Universiti Teknologi MARA K
 ### iCMS2017
 The conference was originally one of the flagship conferences under the previously known International Conference of Art, Science and Technology which had been successfully organized in 2010 and 2012. Building on the success of these two conferences, the organizers decided to hold a more focused conference. Now running for the 3rd time, iCMS2017 is a catalyst for researchers to present their ideas that will bring the three different fields of computer science, mathematics and statistics together and bridge the gap by giving them the opportunity to gain insights into new areas and new perspectives to their respective fields.
  
-### uRos2017 – Asia Pacific  
+### UROS2017 – Asia Pacific  
 The conference provides a platform for a public forum for researchers from academia and industries to present, exchange ideas and discuss developments in state-of-the-art statistical software commonly used in research. The most focused debates are expected to be the use of R in official Statistics.  
   
   
 ### Co-organisers:  
-<img src="images/uitm.png" style="width:50%; margin-right: 18px" align="left"> |<img src="images/nis.png" style="width:50%; margin-right: 18px" align="left"> |<img src="images/eco.jpg" style="width:50%; margin-right: 18px" align="left"> |<img src="images/ues.png" style="width:50%; margin-right: 18px" align="left"> | <img src="images/ub.jpg" style="width:50%; margin-right: 18px" align="left"> | <img src="images/ntu.jpg" style="width:50%; margin-right: 18px" align="left">
---|--|--|--|--|--
+<img src="images/uitm.png" style="width:80%; margin-right: 18px" align="center"> |<img src="images/nis.png" style="width:80%; margin-right: 18px" align="center"> |<img src="images/eco.jpg" style="width:80%; margin-right: 18px" align="center"> |<img src="images/ues.png" style="width:80%; margin-right: 18px" align="center"> | <img src="images/ub.jpg" style="width:80%; margin-right: 18px" align="center"> | <img src="images/ntu.jpg" style="width:80%; margin-right: 18px" align="center">
+:--:|:--:|:--:|:--:|:--:|:--:
 Kedah Branch Campus | National Institute of Statistics, Romania | Ecological University of Bucharest | The Bucharest University of Economic Studies | The University of Bucharest | NicolaeTitulescu University of Bucharest  
 \newlines  
   
@@ -52,16 +52,19 @@ Kedah Branch Campus | National Institute of Statistics, Romania | Ecological Uni
 ## Speakers  
 
 ### Matthias Templ, PhD
-<img src="images/matthias.png" style="width:20%; margin-right: 18px" align="center">  
-Dr Matthias Templ is the owner of data analysis company OG. He obtained his PhD in Technical Mathematics from Vienna University of Technology and was an associate professor at the same university. Currently Dr Temple lectures at the Institute of Data Analysis and Process Design, Zurich University of Applied Sciences, Switzerland. He also holds a position as a consultant to the Palacký University Olomouc, Czech Republic. Dr Templ is a researcher at the Quality and Methods Unit at Statistics Austria. His other consultation works include for the World Bank and the OECD. His main research interest is in the area of imputation, statistical disclosure control, visualization, compositional data analysis, computational statistics, teaching in statistics and cluster analysis. He participated in many European research projects, to name one of those: the AMELI project for adequate estimation of poverty and social exclusion. Dr Templ has more than 280 scientific contributions in books, scientific journals and conferences as well as more than 40 papers in well-known indexed scientific journals.  He is the author and maintainer of several R packages for official statistics, such as the `sdcMicro` package for statistical disclosure control, the `VIM` package for visualization and imputation of missing values, the `simPop` package for synthetic population simulation, and the `robCompositions` package for robust analysis of compositional data. He is also a co-author to many other packages.  In addition, Dr. Matthias Templ is the editor-in-chief of the Austrian Journal of Statistics; associate editor for Springer’s Journal Wirtschafts-und Sozialstatistische Archiv; editor for the journal The Register; and on the editorial board of three other journals – JWARP journal, The Journal Transactions on Data Privacy, and the Journal Frontiers in Biomedical Physics
+| Matthias Templ, PhD |                                                                  |  
+|:-------------------:|:-----------------------------------------------------------------|  
+|<img src="images/matthias.png" style="width:90%; margin-right: 18px" align="center">| Dr Matthias Templ is the owner of data analysis company OG. He obtained his PhD in Technical Mathematics from Vienna University of Technology and was an associate professor at the same university. Currently Dr Temple lectures at the Institute of Data Analysis and Process Design, Zurich University of Applied Sciences, Switzerland. He also holds a position as a consultant to the Palacký University Olomouc, Czech Republic. Dr Templ is a researcher at the Quality and Methods Unit at Statistics Austria. His other consultation works include for the World Bank and the OECD. His main research interest is in the area of imputation, statistical disclosure control, visualization, compositional data analysis, computational statistics, teaching in statistics and cluster analysis. He participated in many European research projects, to name one of those: the AMELI project for adequate estimation of poverty and social exclusion. Dr Templ has more than 280 scientific contributions in books, scientific journals and conferences as well as more than 40 papers in well-known indexed scientific journals.  He is the author and maintainer of several R packages for official statistics, such as the `sdcMicro` package for statistical disclosure control, the `VIM` package for visualization and imputation of missing values, the `simPop` package for synthetic population simulation, and the `robCompositions` package for robust analysis of compositional data. He is also a co-author to many other packages.  In addition, Dr. Matthias Templ is the editor-in-chief of the Austrian Journal of Statistics; associate editor for Springer’s Journal Wirtschafts-und Sozialstatistische Archiv; editor for the journal The Register; and on the editorial board of three other journals – JWARP journal, The Journal Transactions on Data Privacy, and the Journal Frontiers in Biomedical Physics |  
   
-### Professor Dr. Nicolaas Jan Dirk Nagelkerke
-<img src="images/nico.png" style="width:20%; margin-right: 18px" align="center">  
-Professor Nagelkerke obtained his PhD in biostatistics from the University of Amsterdam. The Nagelkerke *$R^2$* coefficient of determination adopted by SAS and SPSS statistical packages in their logistic regression tools is attributed to Professor Nagelkerke’s work published in Biometrika. He has over 400 publications, mostly in international peer reviewed journals. Professor Nagelkerke is a biostatistician, an epidemiologist and a mathematical modeller with experience in teaching and research and statistical consultancy works in health related industry in Europe, Canada, Africa, Middle East and South East Asia. He has extensive experience in infectious diseases and epidemiological research and modelling, notably TB and HIV/AIDS. His collaboration works included with the Centre for Global Health Research (University of Toronto); WHO in West Africa (burden of disease of tuberculosis), and UNAIDS (mathematical modelling on HIV epidemics). He also did consultancies for the World Bank on mathematical modelling on the impact of antiretroviral therapy in India and on modelling the effects of DOTS(+) on TB control in the Russian Federation. He was attached, to name a few, with the Malawi-Liverpool Welcome Trust, Malawi; Institute of Public Health, United Arab Emirates University; Eramus Medical Center, Rotterdam; Medical Statistics Department of Leiden University; Royal Netherlands Tuberculosis Association; Netherlands National Institute of Public Health and the Environment; Nairobi University; Manitoba University and taught at the Cho Ray Hospital HCM City, Vietnam. 
+### Professor Dr. Nicolaas Jan Dirk Nagelkerke  
+| Professor Dr. Nicolaas Jan Dirk Nagelkerke |                                                                  |  
+|:-------------------:|:-----------------------------------------------------------------| 
+| <img src="images/nico.png" style="width:90%; margin-right: 18px" align="center"> | Professor Nagelkerke obtained his PhD in biostatistics from the University of Amsterdam. The Nagelkerke *$R^2$* coefficient of determination adopted by SAS and SPSS statistical packages in their logistic regression tools is attributed to Professor Nagelkerke’s work published in Biometrika. He has over 400 publications, mostly in international peer reviewed journals. Professor Nagelkerke is a biostatistician, an epidemiologist and a mathematical modeller with experience in teaching and research and statistical consultancy works in health related industry in Europe, Canada, Africa, Middle East and South East Asia. He has extensive experience in infectious diseases and epidemiological research and modelling, notably TB and HIV/AIDS. His collaboration works included with the Centre for Global Health Research (University of Toronto); WHO in West Africa (burden of disease of tuberculosis), and UNAIDS (mathematical modelling on HIV epidemics). He also did consultancies for the World Bank on mathematical modelling on the impact of antiretroviral therapy in India and on modelling the effects of DOTS(+) on TB control in the Russian Federation. He was attached, to name a few, with the Malawi-Liverpool Welcome Trust, Malawi; Institute of Public Health, United Arab Emirates University; Eramus Medical Center, Rotterdam; Medical Statistics Department of Leiden University; Royal Netherlands Tuberculosis Association; Netherlands National Institute of Public Health and the Environment; Nairobi University; Manitoba University and taught at the Cho Ray Hospital HCM City, Vietnam. |   
   
 ### Professor Dr Martin Everett  
-<img src="images/martin.png" style="width:20%; margin-right: 18px" align="center">  
-Professor Martin Everett joined University of Manchester in 2009 having previously worked at East London, Westminster and Greenwich universities. He has helped cofound the Mitchell Centre for Social Network Analysis which evolved from the existing Manchester Social Networks Group. He is a past president of the International Network for Social Network Analysis (INSNA) and a Simmel award holder (the highest award given by the organization). He was elected an academician of the Academy of Social Sciences in 2004. Professor Everett co-author with Steve Borgatti in the development of the software package UCINET, the world’s most commonly used software for analyzing social network data. He has been consulted extensively on the use of networks with government agencies as well as public and private companies. He has co-authored two books and published over 80 journal articles. Professor Everett is also the co-editor of the journal Social Networks. The Impact Factor of the journal is 2.784 with 5-Year Impact Factor of 4.113, and SCImago Journal Rank (SJR) of 2.070.  
+| Professor Dr. martin Everett |                                                                  |  
+|:-------------------:|:-----------------------------------------------------------------|
+| <img src="images/martin.png" style="width:90%; margin-right: 18px" align="center"> | Professor Martin Everett joined University of Manchester in 2009 having previously worked at East London, Westminster and Greenwich universities. He has helped cofound the Mitchell Centre for Social Network Analysis which evolved from the existing Manchester Social Networks Group. He is a past president of the International Network for Social Network Analysis (INSNA) and a Simmel award holder (the highest award given by the organization). He was elected an academician of the Academy of Social Sciences in 2004. Professor Everett co-author with Steve Borgatti in the development of the software package UCINET, the world’s most commonly used software for analyzing social network data. He has been consulted extensively on the use of networks with government agencies as well as public and private companies. He has co-authored two books and published over 80 journal articles. Professor Everett is also the co-editor of the journal Social Networks. The Impact Factor of the journal is 2.784 with 5-Year Impact Factor of 4.113, and SCImago Journal Rank (SJR) of 2.070. |  
   
 <br/>  
   
@@ -138,7 +141,7 @@ The course will: 1) Introduce the idea of Social Network Analysis; 2) Explain ho
 ### International Scientific Committee  
   
 SC Members|Institution
---|--
+--|-------
 Tudorel Andrei|National Institute of Statistics and Bucharest, University of Economic Studies, Bucharest, Romania  
 Matthias Templ|Statistics Austria and Institute of Data Analysis and Process Design, Zurich University of Applied Sciences, Zurich Switzerland  
 Ralf Munnich|University of Trier, Germany  
